# cc-stats

./: .gitignore  INSTALL.zh-CN.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
deploy/systemd/: cc-stats-costrict-client.service  cc-stats-server.service
deploy/windows/: start-costrict-client.ps1
install/: client.ps1  client.sh  server.sh
plugins/cc-stats-telemetry/: README.md
plugins/cc-stats-telemetry/.claude-plugin/: plugin.json
plugins/cc-stats-telemetry/hooks/: hooks.json
plugins/cc-stats-telemetry/scripts/: cc-stats-ingest.mjs
src/cc_stats/: analysis.py  classification.py  cli.py  config.py  models.py  paths.py  portable.py  transport.py  utils.py
src/cc_stats/collectors/: __init__.py  claude_code.py  common.py  costrict.py
src/cc_stats/server/: __init__.py  app.py  db.py
src/cc_stats/server/templates/: base.html  index.html  session_detail.html  sessions.html  user_detail.html
tests/: test_core.py
