[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-stats"
version = "0.1.0"
description = "Cross-platform AI usage analytics for Claude Code and costrict IDE"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
server = [
  "fastapi>=0.115.0",
  "jinja2>=3.1.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
cc-stats = "cc_stats.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cc_stats = [
  "server/templates/*.html",
]
